# adv_python_homework_3

./: .gitignore  main.py  pyproject.toml  requirements.txt
classes/: parser_hh.py
utils/: config.py
