[tool.poetry]
name = "adv-python-homework-3"
version = "0.1.0"
description = ""
authors = ["korpaxdev <korpaxdev@gmail.com>"]
readme = "README.md"
packages = [{include = "adv_python_homework_3"}]

[tool.poetry.dependencies]
python = "^3.10"
fake-useragent = "^1.1.1"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
